# nucleo32-stm32f042k6-template

./: CMakeLists.txt  Readme.md  nucleo32-stm32f046k6t-base.ioc
Inc/: gpio.h  i2c.h  main.h  spi.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h  usart.h
Src/: gpio.c  i2c.c  main.c  spi.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c  system_stm32f0xx.c  usart.c
